--- a/fontend/src/app/views/home_page/details-table/details-table.component.html
+++ b/fontend/src/app/views/home_page/details-table/details-table.component.html
@@ -10,7 +10,7 @@
 
     <td style="background-color: #FFFFCC;">&nbsp;<b>{{reportCurrentStatistic.developmentalSubCount}}</b></td>
     <td style="background-color: #FFCC99">&nbsp;<b>{{reportCurrentStatistic.paymentValueSum|number}} đ</b></td>
-    <td style="background-color: #CCFFFF">&nbsp;<b>{{reportCurrentStatistic.paymentValueSum}}</b></td>
+    <td style="background-color: #CCFFFF">&nbsp;<b>{{reportCurrentStatistic.effectiveSubCount|number}}</b></td>
     <td style="background-color: #CC99FF">&nbsp;<b>{{reportCurrentStatistic.problemCount}}</b></td>
   </tr>
   </tbody>
