--- a/fontend/src/app/views/layouts/header/header.component.html
+++ b/fontend/src/app/views/layouts/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-2 position-relative" style="margin: 0px; padding: 0px;">
+  <div class="col-sm-2 position-relative">
     <img class="img-fluid position-relative mobitv-logo" style="padding: 0px; margin: 0px; max-width: 120px; height: auto;"
          src="assets/images/20180727092536_qưeqwe-01.jpg" alt="Mobitv" />
     <p>Thời gian truy cập: {{date | date:'dd/MM/yyyy'}}</p>
