--- a/fontend/src/app/views/home_page/details-table/details-table.component.html
+++ b/fontend/src/app/views/home_page/details-table/details-table.component.html
@@ -2,9 +2,9 @@
   <tbody>
   <tr>
     <td style="background-color: #FFFFCC;">&nbsp;<p>Tổng Thuê bao kích hoạt mới trong ngày</p></td>
-    <td style="background-color: #FFCC99">&nbsp;<p>tổng số tiền thu cước trong ngày</p></td>
-    <td style="background-color: #CCFFFF">&nbsp;<p>Tổng thuê bao hoạt động trong ngày</p></td>
-    <td style="background-color: #CC99FF">&nbsp;<p>Tổng sự cố khiếu nại trong ngày</p></td>
+    <td style="background-color: #FFCC99">&nbsp;<p>Thu cước trong ngày</p></td>
+    <td style="background-color: #CCFFFF">&nbsp;<p>Hoạt động trong ngày</p></td>
+    <td style="background-color: #CC99FF">&nbsp;<p>Sự cố trong ngày</p></td>
   </tr>
   <tr *ngIf="reportCurrentStatistic">
 
