--- a/fontend/src/app/views/login/login.component.html
+++ b/fontend/src/app/views/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="main">
   <div class="panel-heading">
     <div class="panel-title text-center">
-      <h1 class="title">Company Name</h1>
+      <h1 class="title">AVG</h1>
       <hr/>
     </div>
   </div>
