--- a/fontend/src/app/charts/charge/charge.component.html
+++ b/fontend/src/app/charts/charge/charge.component.html
@@ -7,10 +7,10 @@
             [legend]="barChartLegend"
             [chartType]="barChartType">
     </canvas>
-    <div>
-        <p><b>Cod(Thu hộ):</b> Napas; Momo; Payoo; ZNapas; Viettel; Mobifone VAS</p>
-        <p><b>Thẻ điện tử:</b> Zizi; Vnpost; Vnpay; VTCITG</p>
-        <p><b>Thẻ vật lý:</b> Thẻ cào mobiTV.</p>
+    <div  >
+        <p class="description"><b>Cod(Thu hộ):</b> Napas; Momo; Payoo; ZNapas; Viettel; Mobifone VAS</p>
+        <p class="description"><b>Thẻ điện tử:</b> Zizi; Vnpost; Vnpay; VTCITG</p>
+        <p class="description"><b>Thẻ vật lý:</b> Thẻ cào mobiTV.</p>
     </div>
   </div>
 </div>
