--- a/fontend/src/app/charts/charge/charge.component.html
+++ b/fontend/src/app/charts/charge/charge.component.html
@@ -7,11 +7,11 @@
             [legend]="barChartLegend"
             [chartType]="barChartType">
     </canvas>
-    <div  >
-        <p class="description"><b>Cod(Thu hộ):</b> Napas; Momo; Payoo; ZNapas; Viettel; Mobifone VAS</p>
-        <p class="description"><b>Thẻ điện tử:</b> Zizi; Vnpost; Vnpay; VTCITG</p>
-        <p class="description"><b>Thẻ vật lý:</b> Thẻ cào mobiTV.</p>
-    </div>
+    <!--<div  >-->
+        <!--<p class="description"><b>Cod(Thu hộ):</b> Napas; Momo; Payoo; ZNapas; Viettel; Mobifone VAS</p>-->
+        <!--<p class="description"><b>Thẻ điện tử:</b> Zizi; Vnpost; Vnpay; VTCITG</p>-->
+        <!--<p class="description"><b>Thẻ vật lý:</b> Thẻ cào mobiTV.</p>-->
+    <!--</div>-->
   </div>
 </div>
 
