--- a/fontend/src/app/views/home_page/main-content/main-content.component.html
+++ b/fontend/src/app/views/home_page/main-content/main-content.component.html
@@ -19,7 +19,7 @@
     <app-subscriber-by-area [chartsData]="data"></app-subscriber-by-area>
   </div>
   <div class="col-sm-5" style="border: 1px solid black;">
-    <b>IV. Báo cáo thu cước theo hình thức (COD, Thẻ điện tử, Thẻ Vật lý)</b>
+    <b>IV. Báo cáo thu cước theo hình thức</b>
     <!--<img class="img-fluid" src="img/Untitled-9-01.jpg" alt="Mobitv" />-->
     <app-charge [chartsData]="data"></app-charge>
   </div>
