--- a/fontend/src/app/views/layouts/header/header.component.html
+++ b/fontend/src/app/views/layouts/header/header.component.html
@@ -1,26 +1,16 @@
-<div class="row">
-  <div class="col-sm-2 position-relative">
-    <img class="img-fluid position-relative mobitv-logo" style="padding: 0px; margin: 0px; max-width: 120px; height: auto;"
-         src="assets/images/20180727092536_qưeqwe-01.jpg" alt="Mobitv" />
+
+<div class="row" style="background-color: #161616">
+  <div class="col-5 col-sm-5">
     <p>Thời gian truy cập: {{date | date:'dd/MM/yyyy'}}</p>
   </div>
-  <div class="col-sm-2"></div>
-  <div class="col-sm-6">
-    <div class="position-relative" style="margin: auto">
-      <h5 class="text-black" style="margin-top: 10px; margin-bottom: 20px;"><strong>HỆ THỐNG BÁO CÁO HOẠT ĐỘNG THUÊ BAO</strong></h5>
-      Công ty: Cổ phần nghe nhìn toàn cầu<br>
-      Địa chỉ: Tầng 12, tòa nhà IC 82 Duy Tân, P.Dịch Vọng Hậu, Q. Cầu Giấy, HN.
-    </div>
+  <div class="col-2 col-sm-2 position-relative" style="margin: auto; padding: 0px; vertical-align: middle">
+    <img class="img-fluid position-relative mobitv-logo" style="padding: 0px; margin: 0px; max-width: 150px; height: auto;" src="assets/images/mobitv-logo.png" alt="Mobitv" />
   </div>
-  <div class="col-sm-2">
-    <!--<ul>-->
-      <!--<li>-->
-        <!--<a>Username</a>-->
-        <!--<ul class="dropdown">-->
-          <!--<li><a href="#">Log out</a></li>-->
-        <!--</ul>-->
-      <!--</li>-->
-    <!--</ul>-->
-    <a href="javascript:void(0)" (click)="logout()">Đăng xuất</a>
+  <div class="col-5 col-sm-5"></div>
+</div>
+<hr class="position-relative" style="margin-top: 0px; border: 1px solid #ED1C23;">
+<div class="row">
+  <div class="col-12">
+    <h5 class="text-black text-center" style="font-size: 25px;"><strong><span style="color: #0062B2">HỆ THỐNG BÁO CÁO</span> <span style="color: #EE1A21;">HOẠT ĐỘNG THUÊ BAO</span></strong></h5>
   </div>
 </div>
