--- a/fontend/src/app/views/home_page/index/index.component.html
+++ b/fontend/src/app/views/home_page/index/index.component.html
@@ -1,9 +1,13 @@
 <app-header></app-header>
 <hr class="position-relative" style="margin-top: 0px;">
-<div class="container">
+<div class="container-fluid">
+
+
   <app-details-table></app-details-table>
-</div>
+
 <div class="mobi-graph position-relative" style="padding: 25px; margin: auto;">
 
   <app-main-content></app-main-content>
 </div>
+</div>
+<app-footer></app-footer>
