--- a/fontend/src/styles.css
+++ b/fontend/src/styles.css
@@ -1,5 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-
+body {
+  padding: 0px;
+  margin: 0px;
+  font-family: Arial;
+  font-size: 14px;
+  color: white;
+  background-color: #323232!important;
+}
 .charts{
   margin: 20px 0 20px 0!important;
 }
