--- a/fontend/src/app/views/login/login.component.html
+++ b/fontend/src/app/views/login/login.component.html
@@ -54,6 +54,10 @@
       <div class="login-register">
         <a href="/register">Create account</a> or <a href="reset_password.php">reset password</a>
       </div>
+      
     </form>
+    <!-- <button #googleBtn>Google Sign-In</button> -->
+    <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
+    <button (click)="socialSignIn('google')">Sign in with Google</button>
   </div>
 </div>
