sua mau text label

--- a/fontend/src/app/views/layouts/header/header.component.html
+++ b/fontend/src/app/views/layouts/header/header.component.html
@@ -6,11 +6,13 @@
   <div class="col-2 col-sm-2 position-relative" style="margin: auto; padding: 0px; vertical-align: middle">
     <img class="img-fluid position-relative mobitv-logo" style="padding: 0px; margin: 0px; max-width: 150px; height: auto;" src="assets/images/mobitv-logo.png" alt="Mobitv" />
   </div>
-  <div class="col-5 col-sm-5"></div>
+  <div class="col-sm-2"></div>
+  <div class="col-3 col-sm-3 text-right"><a href="script:void(0)" (click)="logout()">Đăng xuất</a></div>
 </div>
 <hr class="position-relative" style="margin-top: 0px; border: 1px solid #ED1C23;">
 <div class="row">
   <div class="col-12">
     <h5 class="text-black text-center" style="font-size: 25px;"><strong><span style="color: #0062B2">HỆ THỐNG BÁO CÁO</span> <span style="color: #EE1A21;">HOẠT ĐỘNG THUÊ BAO</span></strong></h5>
   </div>
+
 </div>
