--- a/fontend/src/app/charts/charge/charge.component.html
+++ b/fontend/src/app/charts/charge/charge.component.html
@@ -1,6 +1,8 @@
 <div class="charts">
   <div style="display: block">
-    <canvas baseChart
+    <canvas
+      id="bar-chart"
+      baseChart
             [datasets]="barChartData"
             [labels]="barChartLabels"
             [options]="barChartOptions"
