--- a/fontend/src/app/charts/charge/charge.component.html
+++ b/fontend/src/app/charts/charge/charge.component.html
@@ -1,7 +1,7 @@
 <div class="charts">
-  <div style="display: block">
+  <div style="display: block" class="bar-chart">
     <canvas
-      id="bar-chart"
+
       baseChart
             [datasets]="barChartData"
             [labels]="barChartLabels"
