--- a/fontend/src/app/charts/subscriber-by-area/subscriber-by-area.component.html
+++ b/fontend/src/app/charts/subscriber-by-area/subscriber-by-area.component.html
@@ -1,5 +1,5 @@
 <div class="charts">
-  <div style="display: block">
+  <div style="display: block" class="bar-chart">
     <canvas baseChart
             [datasets]="barChartData"
             [labels]="barChartLabels"
