--- a/fontend/src/styles.css
+++ b/fontend/src/styles.css
@@ -29,3 +29,9 @@ display: block!important;
 }
 
 
+.container-fluid {
+  width: 100%;
+
+  padding-right: 0px!important;
+  padding-left: 0px!important;
+}
